--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ a {
 #about-projects {
     font-family: monospace;
     font-size: 1rem;
-    flex-basis: 23%;
+    flex-basis: fit-content;
     justify-content: space-between;
 }
 
