--- a/styles.css
+++ b/styles.css
@@ -38,23 +38,27 @@ a {
 
 #name {
     flex-basis: 80%;
-    font-size: 1.2rem;
-    
+    /* font-size: 1.2rem; */
+    font-size: calc(1.2rem + 0.5vw);
 }
 
 #about-projects {
     font-family: monospace;
-    font-size: 1rem;
-    flex-basis: fit-content;
-    justify-content: space-between;
+    /* font-size: 1rem; */
+    font-size: calc(1rem + 0.5vw);
+    flex-basis: 15%;
+    justify-content:space-around;
+}
+
+#links {
+    justify-content: space-around;
+    flex-basis: 5%;
 }
 
 main {
     flex-grow: 1;
     position: absolute;
     top: 30%;
-    /* padding: 0 2rem 0 2rem; */
-    /* font-size: calc(100%/0.5); */
     font-size: calc(10px + 1.7vw);
     width: 100%;
     text-align: center;
@@ -89,7 +93,6 @@ main {
 }
 
 .center {
-    /* margin-bottom: 4.5rem; */
     margin-bottom: calc(1rem + 1.5vw);
     width: 100%;
     padding: 0 1rem 0 1rem;
@@ -105,10 +108,7 @@ footer {
 }
 
 .greet {
-    /* background-color: aqua; */
     width: 100%;
-    /* text-align: center; */
-    /* background-color: red; */
     margin: 0;
 }
 
@@ -159,14 +159,5 @@ footer {
         list-style: none;
         line-height: 1.5;
     }
-
-    /* main {
-        font-size: 5.5vw;
-    } */
 }
 
-@media screen and (max-width: 300px) {
-    /* body {
-        overflow-x: visible;
-    } */
-}
