--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
     flex-direction: column;
     height: 100vh;
     margin: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url("low-poly-grid-haikei.svg");
+    background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url("images/low-poly-grid-haikei.svg");
     overflow-x: hidden;
 }
 
@@ -50,6 +50,7 @@ a {
     font-size: calc(1rem + 0.5vw);
     flex-basis: 15%;
     justify-content: space-around;
+
 }
 
 #links {
@@ -65,6 +66,35 @@ a {
     justify-content: space-around;
     column-gap: calc(1px + 1.5vw);
     row-gap: calc(5px + 3vw);
+}
+
+#calculator {
+    background: linear-gradient(rgba(5, 10, 24, 0.6), rgba(5, 10, 24, 0.6)), url("images/calculator.png");
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+    /* background-image: url("low-poly-grid-haikei.svg"); */
+}
+
+#webscraper {
+    background: linear-gradient(rgba(5, 10, 24, 0.6), rgba(5, 10, 24, 0.6)), url("images/lolwebscraper.png");
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+}
+
+#hpsa {
+    background: linear-gradient(rgba(5, 10, 24, 0.6), rgba(5, 10, 24, 0.6)), url("images/hpsa.png");
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+}
+
+#gptbot {
+    background: linear-gradient(rgba(5, 10, 24, 0.6), rgba(5, 10, 24, 0.6)), url("images/gptbot.png");
+    background-position:left;
+    background-size:cover;
+    background-repeat: no-repeat;
 }
 
 .projects-grid {
@@ -126,15 +156,6 @@ main {
     padding: 0 1rem 0 1rem;
 }
 
-footer {
-    border-top: 1px solid var(--border-color);
-    padding: 0.2%;
-    text-align: center;
-    position: absolute;
-    bottom: -5rem;
-    width: 100%;
-}
-
 .greet {
     width: 100%;
     margin: 0;
@@ -145,7 +166,6 @@ footer {
     padding: calc(5px + 1vw);
     font-size: calc(10px + 1.5vw);
     border: 1px solid var(--border-color);
-    visibility: hidden;
     margin: 0;
 }
 
