--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ a {
 }
 
 #pantry {
-    background: linear-gradient(rgba(5, 10, 24, 0.6), rgba(5, 10, 24, 0.6)), url("images/pantrypal.png");
+    background: linear-gradient(rgba(5, 10, 24, 0.6), rgba(5, 10, 24, 0.6)), url("images/pantrypal-thumbnail.png");
     object-fit: cover;
     background-position: center;
     background-size: cover;
